--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,6 +6,7 @@
     </script>
 </head>
 <body>
-    <h2>SmoochBot Demo</h2>
+    <h2>Game For You Bot</h2>
+    <h3>Still learning some words.</h3>
 </body>
 </html>
